# ensta_CSC_5RO14_TA

./: CMakeLists.txt  README.md  package.xml
cfg/: parameters.yaml
docs/: verification.md
env/: installation.sh
launch/: base.launch  kobuki.launch
scripts/: astar_planner.py  flag_publisher.py  main.py  map_builder.py  map_visualizer.py  pid_controller.py
